# siemens2mrd

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  refactor_plan.md  tsconfig.json  vite.config.ts
ismrmrd_wasm/: CMakeLists.txt  README.md  manifest.json
ismrmrd_wasm/include/ismrmrd/: wasm_writer.h
ismrmrd_wasm/src/: ismrmrd_wasm_writer.c
public/: THIRD_PARTY_NOTICES.md
scripts/: build-ismrmrd-wasm.sh  check-ismrmrd-wasm.mjs
src/: externals.d.ts  index.css  main.tsx
src/components/: header-tree.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  table.tsx
src/lib/: converter.ts  headerDraft.ts  headerXml.ts  ismrmrdHdf5.ts  mappings.ts  metaMrd.ts  twix.ts  xprotocol.ts
src/lib/converter/: build.ts  constants.ts
src/lib/ismrmrd/: constants.ts  types.ts
src/lib/twix/: constants.ts  layout.ts  parsers.ts  pmu.ts  types.ts  utils.ts
